@@ -93,19 +93,20 @@ public class BuildCommandTest extends BaseCommandTest {
         Files.copy(validProjectPath, this.testResources.resolve("validProject-no-permission"));
     }
 
-    @Test(description = "Build a valid ballerina file")
-    public void testBuildBalFile() throws IOException {
+    @Test(description = "Build a valid ballerina file", dataProvider = "optimizeDependencyCompilation")
+    public void testBuildBalFile(Boolean optimizeDependencyCompilation) throws IOException {
         Path validBalFilePath = this.testResources.resolve("valid-bal-file").resolve("hello_world.bal");
 
         System.setProperty(USER_DIR_PROPERTY, this.testResources.resolve("valid-bal-file").toString());
         // set valid source root
-        BuildCommand buildCommand = new BuildCommand(validBalFilePath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(validBalFilePath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         // name of the file as argument
         new CommandLine(buildCommand).parseArgs(validBalFilePath.toString());
         buildCommand.execute();
 
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-hello-world-bal.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-hello-world-bal.txt"));
 
         Assert.assertTrue(Files.exists(this.testResources
                 .resolve("valid-bal-file")
@@ -114,7 +115,8 @@ public class BuildCommandTest extends BaseCommandTest {
         // copying the executable to a different location before deleting
         // to use for testCodeGeneratorForSingleFile test case
         Files.copy(this.testResources.resolve("valid-bal-file").resolve("hello_world.jar"),
-                this.testResources.resolve("valid-bal-file").resolve("hello_world-for-codegen-test.jar"));
+                this.testResources.resolve("valid-bal-file").resolve("hello_world-for-codegen-test.jar"),
+                StandardCopyOption.REPLACE_EXISTING);
 
         Files.delete(this.testResources
                 .resolve("valid-bal-file")
@@ -133,7 +135,7 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
 
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-foo-bal.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-foo-bal.txt"));
 
         Assert.assertTrue(Files.exists(this.testResources.resolve("valid-bal-file").resolve("foo.jar")));
         long executableSize = Files.size(this.testResources.resolve("valid-bal-file").resolve("foo.jar"));
@@ -145,7 +147,7 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
 
         buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-bar-bal.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-bar-bal.txt"));
 
         Assert.assertTrue(Files.exists(this.testResources.resolve("valid-bal-file").resolve("bar.jar")));
         Assert.assertEquals(Files.size(this.testResources.resolve("valid-bal-file").resolve("bar.jar")),
@@ -164,7 +166,7 @@ public class BuildCommandTest extends BaseCommandTest {
         String helloWorldJarLog = getOutput("build-bal-with-absolute-jar-path.txt")
                 .replace("<ABSOLUTE_JAR_PATH>",
                          helloExecutableTmpDir.toAbsolutePath().resolve("hello_world.jar").toString());
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), helloWorldJarLog);
+        Assert.assertEquals(buildLog.replace("\r", ""), helloWorldJarLog);
 
         Assert.assertTrue(Files.exists(helloExecutableTmpDir.toAbsolutePath().resolve("hello_world.jar")));
 
@@ -180,7 +182,7 @@ public class BuildCommandTest extends BaseCommandTest {
         String hippoJarLog = getOutput("build-bal-with-absolute-jar-path.txt")
                 .replace("<ABSOLUTE_JAR_PATH>",
                          helloExecutableTmpDir.toAbsolutePath().resolve("hippo.jar").toString());
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), hippoJarLog);
+        Assert.assertEquals(buildLog.replace("\r", ""), hippoJarLog);
 
         Assert.assertTrue(Files.exists(helloExecutableTmpDir.toAbsolutePath().resolve("hippo.jar")));
         ProjectUtils.deleteDirectory(helloExecutableTmpDir);
@@ -194,7 +196,7 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
 
         String buildLog = readOutput(true);
-        Assert.assertTrue(buildLog.replaceAll("\r", "")
+        Assert.assertTrue(buildLog.replace("\r", "")
                 .contains("Invalid Ballerina source file(.bal): " + nonBalFilePath));
     }
 
@@ -207,7 +209,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs(validBalFilePath.toString());
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertTrue(buildLog.replaceAll("\r", "")
+        Assert.assertTrue(buildLog.replace("\r", "")
                 .contains("The file does not exist: " + validBalFilePath));
     }
 
@@ -226,49 +228,51 @@ public class BuildCommandTest extends BaseCommandTest {
         }
     }
 
-    @Test(description = "Build bal file containing syntax error")
-    public void testBalFileWithSyntaxError() throws IOException {
+    @Test(description = "Build bal file containing syntax error", dataProvider = "optimizeDependencyCompilation")
+    public void testBalFileWithSyntaxError(Boolean optimizeDependencyCompilation) throws IOException {
         // valid source root path
         Path balFilePath = this.testResources.resolve("bal-file-with-syntax-error").resolve("hello_world.bal");
-        BuildCommand buildCommand = new BuildCommand(balFilePath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(balFilePath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         // non existing bal file
         new CommandLine(buildCommand).parseArgs(balFilePath.toString());
         try {
             buildCommand.execute();
         } catch (BLauncherException e) {
             String buildLog = readOutput(true);
-            Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-syntax-err-bal.txt"));
+            Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-syntax-err-bal.txt"));
             Assert.assertTrue(e.getDetailedMessages().get(0).contains("compilation contains errors"));
         }
     }
 
-    @Test(description = "Build bal package containing syntax error")
-    public void testBalProjectWithSyntaxError() throws IOException {
+    @Test(description = "Build bal package containing syntax error", dataProvider = "optimizeDependencyCompilation")
+    public void testBalProjectWithSyntaxError(Boolean optimizeDependencyCompilation) throws IOException {
         // valid source root path
         Path balFilePath = this.testResources.resolve("bal-project-with-syntax-error");
-        BuildCommand buildCommand = new BuildCommand(balFilePath, printStream, printStream, false, true);
+        BuildCommand buildCommand = new BuildCommand(balFilePath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         // non existing bal file
         new CommandLine(buildCommand).parseArgs(balFilePath.toString());
         try {
             buildCommand.execute();
         } catch (BLauncherException e) {
             String buildLog = readOutput(true);
-            Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-syntax-err-package.txt"));
+            Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-syntax-err-package.txt"));
             Assert.assertTrue(e.getDetailedMessages().get(0).contains("compilation contains errors"));
         }
     }
 
-
-    @Test(description = "Build a valid ballerina project")
-    public void testBuildBalProject() throws IOException {
+    @Test(description = "Build a valid ballerina project", dataProvider = "optimizeDependencyCompilation")
+    public void testBuildBalProject(Boolean optimizeDependencyCompilation) throws IOException {
         Path projectPath = this.testResources.resolve("validApplicationProject");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         // non existing bal file
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", ""),
                             getOutput("build-bal-project.txt"));
 
         Assert.assertTrue(projectPath.resolve("target").resolve("bin").resolve("winery.jar").toFile().exists());
@@ -281,11 +285,8 @@ public class BuildCommandTest extends BaseCommandTest {
     public void testCodeGeneratorForSingleFile() throws IOException {
         Path execPath = this.testResources.resolve("valid-bal-file").resolve("hello_world-for-codegen-test.jar");
         String generatedSource = "dummyfunc-generated_1.class";
-        String generatedResource = "resources/$anon/./0/openapi-spec.yaml";
-
         try (JarFile execJar = new JarFile(execPath.toString())) {
             Assert.assertNull(execJar.getJarEntry(generatedSource));
-            Assert.assertNotNull(execJar.getJarEntry(generatedResource));
         }
     }
 
@@ -297,22 +298,17 @@ public class BuildCommandTest extends BaseCommandTest {
                 .resolve("foo-winery-0.1.0.jar");
         Path execPath = projectPath.resolve("target").resolve("bin").resolve("winery.jar");
         String generatedSource = "foo/winery/0/dummyfunc-generated_1.class";
-        String generatedResource = "resources/foo/winery/0/openapi-spec.yaml";
-
         try (JarFile thinJar = new JarFile(thinJarPath.toString())) {
             Assert.assertNotNull(thinJar.getJarEntry(generatedSource));
-            Assert.assertNotNull(thinJar.getJarEntry(generatedResource));
         }
-
         try (JarFile execJar = new JarFile(execPath.toString())) {
             Assert.assertNotNull(execJar.getJarEntry(generatedSource));
-            Assert.assertNotNull(execJar.getJarEntry(generatedResource));
         }
     }
 
     /**
      * Test jar conflicts of platform libs.
-     *
+     * <pre>
      * one-1.0.0.jar
      * .
      * ├── META-INF
@@ -349,6 +345,7 @@ public class BuildCommandTest extends BaseCommandTest {
      *         ├── Sample2.class ---> conflicted class file
      *         ├── Sample3.class ---> conflicted class file
      *         └── Sample4.class ---> conflicted class file
+     * </pre>
      */
     @Test(description = "Build a ballerina project with conflicted jars")
     public void testBuildBalProjectWithJarConflicts() throws IOException {
@@ -359,7 +356,7 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
         String buildLog = readOutput(true);
 
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", ""),
                             getOutput("build-bal-project-with-jar-conflicts.txt"));
 
         Assert.assertTrue(
@@ -369,11 +366,13 @@ public class BuildCommandTest extends BaseCommandTest {
                                   .resolve("pramodya-conflictProject-0.1.7.jar").toFile().exists());
     }
 
-    @Test(description = "Build a ballerina project with provided scope platform jars")
-    public void testBuildProjectWithProvidedJars() {
+    @Test(description = "Build a ballerina project with provided scope platform jars",
+            dataProvider = "optimizeDependencyCompilation")
+    public void testBuildProjectWithProvidedJars(Boolean optimizeDependencyCompilation) {
         Path projectPath = this.testResources.resolve("projectWithProvidedScope");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         new CommandLine(buildCommand).parseArgs();
         try {
             buildCommand.execute();
@@ -393,20 +392,21 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
         String buildLog = readOutput(true);
 
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", ""),
                 getOutput("project-with-provided-warning.txt"));
     }
 
-    @Test(description = "Build a valid ballerina project with java imports")
-    public void testBuildJavaBalProject() throws IOException {
+    @Test(description = "Build a valid ballerina project with java imports",
+            dataProvider = "optimizeDependencyCompilation")
+    public void testBuildJavaBalProject(Boolean optimizeDependencyCompilation) throws IOException {
         Path projectPath = this.testResources.resolve("validJavaProject");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
-        // non existing bal file
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", ""),
                 getOutput("build-bal-project.txt"));
 
         Assert.assertTrue(projectPath.resolve("target").resolve("bin").resolve("winery.jar").toFile().exists());
@@ -415,15 +415,15 @@ public class BuildCommandTest extends BaseCommandTest {
                                   .resolve("foo-winery-0.1.0.jar").toFile().exists());
     }
 
-    @Test(description = "Build a valid ballerina project")
-    public void testBuildBalProjectFromADifferentDirectory() throws IOException {
+    @Test(dataProvider = "optimizeDependencyCompilation")
+    public void testBuildBalProjectFromADifferentDirectory(Boolean optimizeDependencyCompilation) throws IOException {
         Path projectPath = this.testResources.resolve("validApplicationProject");
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
-        // non existing bal file
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         new CommandLine(buildCommand).parseArgs(projectPath.toString());
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-bal-project.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-bal-project.txt"));
 
         Assert.assertTrue(projectPath.resolve("target").resolve("bin").resolve("winery.jar").toFile().exists());
         Assert.assertTrue(projectPath.resolve("target").resolve("cache").resolve("foo")
@@ -431,16 +431,16 @@ public class BuildCommandTest extends BaseCommandTest {
                 .resolve("foo-winery-0.1.0.jar").toFile().exists());
     }
 
-    @Test(description = "Build a valid ballerina project")
-    public void testBuildProjectWithTests() throws IOException {
+    @Test(dataProvider = "optimizeDependencyCompilation")
+    public void testBuildProjectWithTests(Boolean optimizeDependencyCompilation) throws IOException {
         Path projectPath = this.testResources.resolve("validProjectWithTests");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
-        // non existing bal file
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-bal-project-with-tests.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-bal-project-with-tests.txt"));
 
         Assert.assertTrue(projectPath.resolve("target").resolve("bin").resolve("winery.jar").toFile().exists());
         Assert.assertTrue(projectPath.resolve("target").resolve("cache").resolve("foo")
@@ -448,19 +448,19 @@ public class BuildCommandTest extends BaseCommandTest {
                 .resolve("foo-winery-0.1.0.jar").toFile().exists());
     }
 
-    @Test(description = "Build a valid ballerina project")
-    public void testBuildMultiModuleProject() throws IOException {
+    @Test(dataProvider = "optimizeDependencyCompilation")
+    public void testBuildMultiModuleProject(Boolean optimizeDependencyCompilation) throws IOException {
         Path projectPath = this.testResources.resolve("validMultiModuleProject");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
-        // non existing bal file
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
         String actualOutput1 = getOutput("build-multi-module-project-winery.txt");
         String actualOutput2 = getOutput("build-multi-module-project-winery-storage.txt");
-        Assert.assertTrue(buildLog.replaceAll("\r", "").equals(actualOutput1)
-                || buildLog.replaceAll("\r", "").equals(actualOutput2));
+        Assert.assertTrue(buildLog.replace("\r", "").equals(actualOutput1)
+                || buildLog.replace("\r", "").equals(actualOutput2));
 
         Assert.assertTrue(projectPath.resolve("target").resolve("bin").resolve("winery.jar").toFile().exists());
         Assert.assertTrue(projectPath.resolve("target").resolve("cache").resolve("foo")
@@ -477,11 +477,10 @@ public class BuildCommandTest extends BaseCommandTest {
         Path projectPath = this.testResources.resolve("validProjectWithBuildOptions");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
         BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
-        // non existing bal file
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-project-default-build-options.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-project-default-build-options.txt"));
 
         Assert.assertTrue(projectPath.resolve("target").resolve("bin").resolve("winery.jar").toFile().exists());
         Assert.assertTrue(projectPath.resolve("target").resolve("cache").resolve("foo")
@@ -498,7 +497,6 @@ public class BuildCommandTest extends BaseCommandTest {
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
         BuildCommand buildCommand = new BuildCommand(
                 projectPath, printStream, printStream, false);
-        // non existing bal file
         new CommandLine(buildCommand).parseArgs();
         try {
             buildCommand.execute();
@@ -509,7 +507,7 @@ public class BuildCommandTest extends BaseCommandTest {
         String expectedLog = getOutput("build-bal-project-override-build-options.txt")
                 .replace("<TEST_RESULTS_JSON_PATH>",
                          projectPath.resolve("target").resolve("report").resolve("test_results.json").toString());
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), expectedLog);
+        Assert.assertEquals(buildLog.replace("\r", ""), expectedLog);
 
         Assert.assertTrue(projectPath.resolve("target").resolve("bin").resolve("winery.jar").toFile().exists());
         Assert.assertTrue(projectPath.resolve("target").resolve("cache").resolve("foo")
@@ -529,7 +527,6 @@ public class BuildCommandTest extends BaseCommandTest {
         System.setProperty(USER_DIR_PROPERTY, this.testResources.resolve("valid-bal-file").toString());
         BuildCommand buildCommand = new BuildCommand(
                 projectPath, printStream, printStream, false);
-        // non existing bal file
         new CommandLine(buildCommand).parseArgs();
         try {
             buildCommand.execute();
@@ -537,7 +534,7 @@ public class BuildCommandTest extends BaseCommandTest {
             Assert.fail(e.getDetailedMessages().get(0));
         }
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-hello-world-bal.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-hello-world-bal.txt"));
 
         Assert.assertTrue(Files.exists(this.testResources
                 .resolve("valid-bal-file")
@@ -553,8 +550,7 @@ public class BuildCommandTest extends BaseCommandTest {
         Path projectPath = this.testResources.resolve("valid-bal-file").resolve("hello_world.bal");
         System.setProperty(USER_DIR_PROPERTY, this.testResources.resolve("valid-bal-file").toString());
         BuildCommand buildCommand = new BuildCommand(
-                projectPath, printStream, printStream, false);
-        // non existing bal file
+                projectPath, printStream, printStream, false, Boolean.TRUE);
         new CommandLine(buildCommand).parseArgs();
         try {
             buildCommand.execute();
@@ -562,7 +558,7 @@ public class BuildCommandTest extends BaseCommandTest {
             Assert.fail(e.getDetailedMessages().get(0));
         }
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", ""),
                 getOutput("build-hello-world-bal-with-build-options.txt"));
 
         Assert.assertTrue(Files.exists(this.testResources.resolve("valid-bal-file").resolve("hello_world.jar")));
@@ -617,7 +613,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-project-with-empty-ballerina-toml.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-project-with-empty-ballerina-toml.txt"));
 
         Assert.assertTrue(
                 projectPath.resolve("target").resolve("bin").resolve("validProjectWithEmptyBallerinaToml.jar").toFile()
@@ -656,20 +652,22 @@ public class BuildCommandTest extends BaseCommandTest {
             buildCommand.execute();
         }
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-empty-project-with-build-tools.txt"));
+        Assert.assertEquals(buildLog.replace("\r", "").replace("\\", "/"),
+                getOutput("build-empty-project-with-build-tools.txt"));
     }
 
-    @Test(description = "Build an empty package with tests only")
-    public void testBuildEmptyProjectWithTestsOnly() throws IOException {
+    @Test(description = "Build an empty package with tests only", dataProvider = "optimizeDependencyCompilation")
+    public void testBuildEmptyProjectWithTestsOnly(Boolean optimizeDependencyCompilation) throws IOException {
         Path projectPath = this.testResources.resolve("emptyProjectWithTestsOnly");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
 
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
 
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", ""),
                 getOutput("build-empty-project-with-tests-only.txt"));
     }
 
@@ -683,7 +681,7 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
         String buildLog = readOutput(true);
 
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", ""),
                 getOutput("build-empty-project-with-nondefault-modules.txt"));
     }
 
@@ -697,7 +695,7 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
         String buildLog = readOutput(true);
 
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", ""),
                 getOutput("build-empty-project-with-nondefault-modules-tests-only.txt"));
     }
 
@@ -751,7 +749,7 @@ public class BuildCommandTest extends BaseCommandTest {
             new CommandLine(buildCommand).parseArgs();
             buildCommand.execute();
             String buildLog = readOutput(true);
-            Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-conflicted-jars-project.txt"));
+            Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-conflicted-jars-project.txt"));
         }
     }
 
@@ -764,8 +762,8 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
 
         String buildLog = readOutput(true);
-        Assert.assertTrue(buildLog.replaceAll("\r", "").contains(getOutput("dump-build-time-package.txt")));
-        validateBuildTimeInfo(buildLog.replaceAll("\r", ""));
+        Assert.assertTrue(buildLog.replace("\r", "").contains(getOutput("dump-build-time-package.txt")));
+        validateBuildTimeInfo(buildLog.replace("\r", ""));
 
         Assert.assertTrue(Files.exists(projectPath.resolve("target").resolve("build-time.json")));
         Assert.assertTrue(projectPath.resolve("target").resolve("build-time.json").toFile().length() > 0);
@@ -781,8 +779,8 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
 
         String buildLog = readOutput(true);
-        Assert.assertTrue(buildLog.replaceAll("\r", "").contains(getOutput("dump-build-time-standalone.txt")));
-        validateBuildTimeInfo(buildLog.replaceAll("\r", ""));
+        Assert.assertTrue(buildLog.replace("\r", "").contains(getOutput("dump-build-time-standalone.txt")));
+        validateBuildTimeInfo(buildLog.replace("\r", ""));
 
         Assert.assertTrue(Files.exists(this.testResources.resolve("valid-bal-file").resolve("build-time.json")));
         Assert.assertTrue(
@@ -856,8 +854,8 @@ public class BuildCommandTest extends BaseCommandTest {
         }
     }
 
-    @Test(description = "Build a ballerina project with the flag dump-graph")
-    public void testBuildBalProjectWithDumpGraphFlag() throws IOException {
+    @Test(dataProvider = "optimizeDependencyCompilation")
+    public void testBuildBalProjectWithDumpGraphFlag(Boolean optimizeDependencyCompilation) throws IOException {
         Path dumpGraphResourcePath = this.testResources.resolve("projectsForDumpGraph");
         BCompileUtil.compileAndCacheBala(dumpGraphResourcePath.resolve("package_c"), testDistCacheDirectory,
                 projectEnvironmentBuilder);
@@ -867,10 +865,11 @@ public class BuildCommandTest extends BaseCommandTest {
         Path projectPath = dumpGraphResourcePath.resolve("package_a");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
 
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         new CommandLine(buildCommand).parseArgs("--dump-graph");
         buildCommand.execute();
-        String buildLog = readOutput(true).replaceAll("\r", "").strip();
+        String buildLog = readOutput(true).replace("\r", "").strip();
 
         Assert.assertEquals(buildLog, getOutput("build-project-with-dump-graph.txt"));
         Assert.assertTrue(projectPath.resolve("target").resolve("cache").resolve("foo")
@@ -880,8 +879,8 @@ public class BuildCommandTest extends BaseCommandTest {
         ProjectUtils.deleteDirectory(projectPath.resolve("target"));
     }
 
-    @Test(description = "Build a ballerina project with the flag dump-raw-graphs")
-    public void testBuildBalProjectWithDumpRawGraphsFlag() throws IOException {
+    @Test(dataProvider = "optimizeDependencyCompilation")
+    public void testBuildBalProjectWithDumpRawGraphsFlag(Boolean optimizeDependencyCompilation) throws IOException {
         Path dumpGraphResourcePath = this.testResources.resolve("projectsForDumpGraph");
         BCompileUtil.compileAndCacheBala(dumpGraphResourcePath.resolve("package_c"), testDistCacheDirectory,
                 projectEnvironmentBuilder);
@@ -891,10 +890,11 @@ public class BuildCommandTest extends BaseCommandTest {
         Path projectPath = dumpGraphResourcePath.resolve("package_a");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
 
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         new CommandLine(buildCommand).parseArgs("--dump-raw-graphs");
         buildCommand.execute();
-        String buildLog = readOutput(true).replaceAll("\r", "").strip();
+        String buildLog = readOutput(true).replace("\r", "").strip();
 
         Assert.assertEquals(buildLog, getOutput("build-project-with-dump-raw-graphs.txt"));
         Assert.assertTrue(projectPath.resolve("target").resolve("cache").resolve("foo")
@@ -920,10 +920,10 @@ public class BuildCommandTest extends BaseCommandTest {
                 buildLog.replaceAll("\r", ""),
                 getOutput("corrupted-dependencies-toml.txt").replaceAll("\r", ""));
         String depContent = Files.readString(projectPath.resolve("Dependencies.toml"), Charset.defaultCharset())
-                .replace("/r" , "");
+                .replace("\r" , "");
         String ballerinaShortVersion = RepoUtils.getBallerinaShortVersion();
         String corrcetDepContent = Files.readString(projectPath.resolve("Dependencies-corrected.toml"),
-                        Charset.defaultCharset()).replace("/r" , "")
+                        Charset.defaultCharset()).replace("\r" , "")
                         .replace("DIST_VERSION", ballerinaShortVersion);
         Assert.assertEquals(depContent, corrcetDepContent);
         Files.delete(destinationPath);
@@ -971,8 +971,9 @@ public class BuildCommandTest extends BaseCommandTest {
                 "second code gen duration is greater than the expected value");
     }
 
-    @Test(description = "Build a valid ballerina project with a custom maven repo")
-    public void testBuildBalProjectWithCustomMavenRepo() throws IOException {
+    @Test(description = "Build a valid ballerina project with a custom maven repo",
+            dataProvider = "optimizeDependencyCompilation")
+    public void testBuildBalProjectWithCustomMavenRepo(Boolean optimizeDependencyCompilation) throws IOException {
         String username = System.getenv("publishUser");
         String password = System.getenv("publishPAT");
 
@@ -980,8 +981,9 @@ public class BuildCommandTest extends BaseCommandTest {
             Path projectPath = this.testResources.resolve("validProjectWithCustomMavenRepo");
             String content = Files.readString(projectPath.resolve("Ballerina.toml"), Charset.defaultCharset())
                     .replace("{{username}}", username).replace("{{password}}", password);
-            Files.write(projectPath.resolve("Ballerina.toml"), content.getBytes(Charset.defaultCharset()));
-            BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+            Files.writeString(projectPath.resolve("Ballerina.toml"), content, Charset.defaultCharset());
+            BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                    optimizeDependencyCompilation);
             new CommandLine(buildCommand).parseArgs(projectPath.toString());
             buildCommand.execute();
             Assert.assertTrue(projectPath.resolve("target").resolve("platform-libs").resolve("org")
@@ -1011,16 +1013,18 @@ public class BuildCommandTest extends BaseCommandTest {
                 testDistCacheDirectory, projectEnvironmentBuilder);
     }
 
-    @Test(description = "Build a new ballerina project without sticky flag", groups = {"proj-with-deps-update-policy"})
-    public void testBuildNewBalProjectWithoutStickyFlag() throws IOException {
+    @Test(description = "Build a new ballerina project without sticky flag", groups = {"proj-with-deps-update-policy"},
+            dataProvider = "optimizeDependencyCompilation")
+    public void testBuildNewBalProjectWithoutStickyFlag(Boolean optimizeDependencyCompilation) throws IOException {
         Path projectPath = testResources.resolve("dep-dist-version-projects").resolve("newPackage");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
 
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-new-proj-with-dep.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-new-proj-with-dep.txt"));
 
         // Dependencies.toml should have the latest versions of the dependencies
         Path actualDependenciesToml = projectPath.resolve("Dependencies.toml");
@@ -1034,16 +1038,18 @@ public class BuildCommandTest extends BaseCommandTest {
         deleteDirectory(projectPath.resolve("target"));
     }
 
-    @Test(description = "Build a new ballerina project with sticky flag", groups = {"proj-with-deps-update-policy"})
-    public void testBuildNewBalProjectWithStickyFlag() throws IOException {
+    @Test(description = "Build a new ballerina project with sticky flag", groups = {"proj-with-deps-update-policy"},
+            dataProvider = "optimizeDependencyCompilation")
+    public void testBuildNewBalProjectWithStickyFlag(Boolean optimizeDependencyCompilation) throws IOException {
         Path projectPath = testResources.resolve("dep-dist-version-projects").resolve("newPackage");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
 
         new CommandLine(buildCommand).parseArgs("--sticky");
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-new-proj-with-dep.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-new-proj-with-dep.txt"));
 
         // Dependencies.toml should have the latest versions of the dependencies
         Path actualDependenciesToml = projectPath.resolve("Dependencies.toml");
@@ -1058,21 +1064,23 @@ public class BuildCommandTest extends BaseCommandTest {
     }
 
     @Test(description = "Build a project already built with an older distribution without sticky flag",
-            groups = {"proj-with-deps-update-policy"})
-    public void testBuildProjectPrecompiledWithOlderDistWithoutStickyFlag() throws IOException {
+            groups = {"proj-with-deps-update-policy"}, dataProvider = "optimizeDependencyCompilation")
+    public void testBuildProjectPrecompiledWithOlderDistWithoutStickyFlag(Boolean optimizeDependencyCompilation)
+            throws IOException {
         Path projectPath = testResources.resolve("dep-dist-version-projects").resolve("preCompiledPackage");
         replaceDependenciesTomlContent(projectPath, "**INSERT_DISTRIBUTION_VERSION_HERE**", "2201.5.0");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
 
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
         Assert.assertEquals(
-                buildLog.replaceAll("\r", ""),
+                buildLog.replace("\r", ""),
                 getOutput("build-old-dist-precomp-proj-without-sticky.txt")
-                        .replaceAll("INSERT_NEW_DIST_VERSION_HERE", getNewVersionForOldDistWarning())
-                        .replaceAll("INSERT_OLD_DIST_VERSION_HERE", getOldVersionForOldDistWarning("2201.5.0")));
+                        .replace("INSERT_NEW_DIST_VERSION_HERE", getNewVersionForOldDistWarning())
+                        .replace("INSERT_OLD_DIST_VERSION_HERE", getOldVersionForOldDistWarning("2201.5.0")));
 
         // Dependencies.toml should be updated to the latest minor versions.
         // depA:1.0.0 -> depA:1.1.0
@@ -1091,21 +1099,23 @@ public class BuildCommandTest extends BaseCommandTest {
     }
 
     @Test(description = "Build a project already built with an older distribution with sticky flag",
-            groups = {"proj-with-deps-update-policy"})
-    public void testBuildProjectPrecompiledWithOlderDistWithStickyFlag() throws IOException {
+            groups = {"proj-with-deps-update-policy"}, dataProvider = "optimizeDependencyCompilation")
+    public void testBuildProjectPrecompiledWithOlderDistWithStickyFlag(Boolean optimizeDependencyCompilation)
+            throws IOException {
         Path projectPath = testResources.resolve("dep-dist-version-projects").resolve("preCompiledPackage");
         replaceDependenciesTomlContent(projectPath, "**INSERT_DISTRIBUTION_VERSION_HERE**", "2201.5.0");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
 
         new CommandLine(buildCommand).parseArgs("--sticky");
         buildCommand.execute();
         String buildLog = readOutput(true);
         Assert.assertEquals(
-                buildLog.replaceAll("\r", ""),
+                buildLog.replace("\r", ""),
                 getOutput("build-old-dist-precomp-proj-with-sticky.txt")
-                        .replaceAll("INSERT_NEW_DIST_VERSION_HERE", getNewVersionForOldDistWarning())
-                        .replaceAll("INSERT_OLD_DIST_VERSION_HERE", getOldVersionForOldDistWarning("2201.5.0")));
+                        .replace("INSERT_NEW_DIST_VERSION_HERE", getNewVersionForOldDistWarning())
+                        .replace("INSERT_OLD_DIST_VERSION_HERE", getOldVersionForOldDistWarning("2201.5.0")));
 
         // Dependencies should stick to the ones already in Dependencies.toml.
         // depA:1.0.0 -> depA:1.0.0
@@ -1123,22 +1133,24 @@ public class BuildCommandTest extends BaseCommandTest {
     }
 
     @Test(description = "Build a project already built with an U4 or older distribution without sticky flag",
-            groups = {"proj-with-deps-update-policy"})
-    public void testBuildProjectPrecompiledWithNoDistWithoutStickyFlag() throws IOException {
+            groups = {"proj-with-deps-update-policy"}, dataProvider = "optimizeDependencyCompilation")
+    public void testBuildProjectPrecompiledWithNoDistWithoutStickyFlag(Boolean optimizeDependencyCompilation)
+            throws IOException {
         Path projectPath = testResources.resolve("dep-dist-version-projects").resolve("preCompiledPackage");
         replaceDependenciesTomlContent(
                 projectPath, "distribution-version = \"**INSERT_DISTRIBUTION_VERSION_HERE**\"", "");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
 
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
         Assert.assertEquals(
-                buildLog.replaceAll("\r", ""),
+                buildLog.replace("\r", ""),
                 getOutput("build-old-dist-precomp-proj-without-sticky.txt")
-                        .replaceAll("INSERT_NEW_DIST_VERSION_HERE", getNewVersionForOldDistWarning())
-                        .replaceAll("INSERT_OLD_DIST_VERSION_HERE", "4 or an older Update"));
+                        .replace("INSERT_NEW_DIST_VERSION_HERE", getNewVersionForOldDistWarning())
+                        .replace("INSERT_OLD_DIST_VERSION_HERE", "4 or an older Update"));
 
         // Dependencies.toml should be updated to the latest minor versions.
         // depA:1.0.0 -> depA:1.1.0
@@ -1169,10 +1181,10 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
         String buildLog = readOutput(true);
         Assert.assertEquals(
-                buildLog.replaceAll("\r", ""),
+                buildLog.replace("\r", ""),
                 getOutput("build-old-dist-precomp-proj-with-sticky.txt")
-                        .replaceAll("INSERT_NEW_DIST_VERSION_HERE", getNewVersionForOldDistWarning())
-                        .replaceAll("INSERT_OLD_DIST_VERSION_HERE", "4 or an older Update"));
+                        .replace("INSERT_NEW_DIST_VERSION_HERE", getNewVersionForOldDistWarning())
+                        .replace("INSERT_OLD_DIST_VERSION_HERE", "4 or an older Update"));
 
         // Dependencies should stick to the ones already in Dependencies.toml.
         // depA:1.0.0 -> depA:1.0.0
@@ -1201,7 +1213,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-curr-dist-precomp-proj-with-dep.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-curr-dist-precomp-proj-with-dep.txt"));
 
         // Dependencies.toml should be updated to the latest patch versions.
         // depA:1.0.0 -> depA:1.0.1
@@ -1231,7 +1243,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs("--sticky");
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-curr-dist-precomp-proj-with-dep.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-curr-dist-precomp-proj-with-dep.txt"));
 
         // Dependencies should stick to the ones already in Dependencies.toml.
         // depA:1.0.0 -> depA:1.0.0
@@ -1286,7 +1298,7 @@ public class BuildCommandTest extends BaseCommandTest {
             buildCommand.execute();
         } catch (BLauncherException e) {
             String buildLog = readOutput(true);
-            Assert.assertEquals(buildLog.replaceAll("\r", ""),
+            Assert.assertEquals(buildLog.replace("\r", ""),
                 getOutput(outputFile));
             Assert.assertEquals(error, e.getDetailedMessages().get(0));
         }
@@ -1300,7 +1312,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", "").replace("\\", "/"),
             getOutput("build-bal-project-with-build-tool.txt"));
     }
 
@@ -1314,7 +1326,7 @@ public class BuildCommandTest extends BaseCommandTest {
             buildCommand.execute();
         } catch (BLauncherException e) {
             String buildLog = readOutput(true);
-            Assert.assertEquals(buildLog.replaceAll("\r", ""),
+            Assert.assertEquals(buildLog.replace("\r", ""),
                     getOutput("build-bal-project-with-build-tool-not-found.txt"));
             Assert.assertEquals("error: build tool execution contains errors", e.getDetailedMessages().get(0));
         }
@@ -1331,7 +1343,7 @@ public class BuildCommandTest extends BaseCommandTest {
         } catch (BLauncherException e) {
             Assert.assertEquals("error: compilation contains errors", e.getDetailedMessages().get(0));
             String buildLog = readOutput(true);
-            Assert.assertEquals(buildLog.replaceAll("\r", ""),
+            Assert.assertEquals(buildLog.replace("\r", ""),
                     getOutput("build-bal-project-with-invalid-dependency-array.txt"));
         }
     }
@@ -1348,21 +1360,17 @@ public class BuildCommandTest extends BaseCommandTest {
     private String getOldVersionForOldDistWarning(String version) {
         SemanticVersion prevDistributionVersion = SemanticVersion.from(version);
         String prevVersionForDiagnostic;
-        if (null != prevDistributionVersion) {
-            prevVersionForDiagnostic = String.valueOf(prevDistributionVersion.minor());
-            if (prevDistributionVersion.patch() != 0) {
-                prevVersionForDiagnostic += DOT + prevDistributionVersion.patch();
-            }
-        } else {
-            prevVersionForDiagnostic = "4 or an older Update";
+        prevVersionForDiagnostic = String.valueOf(prevDistributionVersion.minor());
+        if (prevDistributionVersion.patch() != 0) {
+            prevVersionForDiagnostic += DOT + prevDistributionVersion.patch();
         }
         return prevVersionForDiagnostic;
     }
 
     static class Copy extends SimpleFileVisitor<Path> {
-        private Path fromPath;
-        private Path toPath;
-        private StandardCopyOption copyOption;
+        private final Path fromPath;
+        private final Path toPath;
+        private final StandardCopyOption copyOption;
 
 
         public Copy(Path fromPath, Path toPath, StandardCopyOption copyOption) {
